--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -102,3 +102,6 @@ jobs:
       uses: mickfeech/firestore-emulator-action@0.0.12
       with: 
         fireStoreProjectID: project-test
+
+        - name: Build and deploy Firebase - Functions + Storage + Firestore or everything with yarn
+  uses: amar-sharma/deploy-firebase-github-ci@latest
